clusters/thestral/apps/network/envoy-gateway/internal/gateway.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: 10.100.10.219
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.apps.schwarz47.at"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.apps.schwarz47.at"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: apps-schwarz47-at-tls
